--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -22,7 +22,7 @@
 	"content_scripts": [
 		{
 			"matches": ["https://twitter.com/*"],
-			"js": ["contentScripts/twitter.js"]
+			"js": ["libs/web3.js", "dist/twitter.js"]
 		}
 	],
 	"permissions": [
