--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cryptowaifus-extension",
+  "name": "waifuchain-extension",
   "version": "1.0.0",
   "description": "Display waifus in social media profiles",
   "main": "index.js",
@@ -14,12 +14,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/corollari/cryptowaifus-extension.git"
+    "url": "git+https://github.com/corollari/waifuchain-extension.git"
   },
   "author": "corollari",
   "license": "Unlicense",
   "bugs": {
-    "url": "https://github.com/corollari/cryptowaifus-extension/issues"
+    "url": "https://github.com/corollari/waifuchain-extension/issues"
   },
-  "homepage": "https://github.com/corollari/cryptowaifus-extension#readme"
+  "homepage": "https://github.com/corollari/waifuchain-extension#readme"
 }
