--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -23,7 +23,8 @@
 	"content_scripts": [
 		{
 			"matches": ["https://twitter.com/*"],
-			"js": ["libs/web3.js", "dist/twitter.js"]
+			"js": ["libs/web3.js", "dist/twitter.js"],
+			"css": ["contentScripts/twitter/styles.css"]
 		}
 	],
 	"permissions": [
